--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.62.3",
+    "@vercel/analytics": "^1.4.0",
     "next": "14.2.4",
     "next-sanity": "^9.8.8",
     "react": "^18",
