--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.62.3",
+    "sharp": "^0.34.2",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
