--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,24 +15,28 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.62.3",
     "@vercel/analytics": "^1.4.0",
-    "next": "14.2.23",
+    "next": "15.3.3",
     "next-sanity": "^9.8.8",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "sanity": "^3.62.3",
     "sharp": "^0.34.2",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "15.3.3",
     "postcss": "^8",
     "prettier": "^2.8.8",
     "sanity-codegen": "^0.9.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5"
   }
 }
